--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -53,40 +53,45 @@
                             <div class="form-group">
                                 <label id="prosecna" class="form-control-label" style="padding-left: 10px">Prosečna ocena : </label>
                                 <div id="ocene" style="margin: 0; padding-top: 0; padding :10px; background-color: inherit; border: none; ">
-                                    <ul id=" petice " style="padding:0%; margin:5px ; ">
+                                    <ul style="padding:0%; margin:5px;">
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
+                                        <span id="petice" class="ocena"></span>
                                     </ul>
-                                    <ul id=" cetvorke " style="padding:0%;margin:5px;">
+                                    <ul style="padding:0%;margin:5px;">
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
+                                        <span id="cetvorke" class="ocena"></span>
                                     </ul>
-                                    <ul id=" trojke " style="padding:0%;margin:5px;">
+                                    <ul style="padding:0%;margin:5px;">
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
+                                        <span id="trojke" class="ocena"></span>
                                     </ul>
-                                    <ul id=" dvojke " style="padding:0%; margin:5px;">
+                                    <ul style="padding:0%; margin:5px;">
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
+                                        <span id="dvojke" class="ocena"></span>
                                     </ul>
-                                    <ul id=" jedinice " style="padding:0%;margin:5px;">
+                                    <ul style="padding:0%;margin:5px;">
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star "></i></li>
+                                        <span id="jedinice" class="ocena"></span>
                                     </ul>
                                 </div>
                             </div>
