--- a/Project/src/main/resources/templates/main.html
+++ b/Project/src/main/resources/templates/main.html
@@ -8,6 +8,7 @@ and open the template in the editor.
 
 <head>
     <title>Nadji posao brzo i lako</title>
+    <meta http-equiv="expires" content="0">
     <meta charset="UTF-8">
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet" id="bootstrap-css">
 
