--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -11280,7 +11280,7 @@
                 margin : 0;
                 width : 55%;
             }
-            
+
             #ocene p {
                 color : #0DB8DE;
             }
@@ -11397,7 +11397,7 @@
 				position: relative; 
 				float:right;
 				margin: 10px; 
-				width: 20%; 
+				width: 60px; 
 				height: 5%; 
 			}
             .kanta:hover {
