--- a/Project/src/main/resources/templates/stranicaOglasa.html
+++ b/Project/src/main/resources/templates/stranicaOglasa.html
@@ -49,7 +49,7 @@
                 <h6>Unesite Vaš CV</h6>
                 <textarea id="unesiCV" onload=""></textarea>
                 <div class='dugme'>
-                    <button type='button' class='btn btn-outline-primary' id='oglas-link' style='border-color : #1abc9c;'>Pošalji CV</button>
+                    <button type='button' onclick="prijavise()" class='btn btn-outline-primary' id='oglas-link' style='border-color : #1abc9c;'>Pošalji CV</button>
                 </div>
             </div>
         </div>
