--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -26,9 +26,8 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/poslodavci">Poslodavci</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#about">O nama</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a id="navProfil" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/profil">Profil</a></li>
-                    <li class="nav-item mx-0 mx-lg-1">
-                        <a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a>
-                    </li>
+                    <li class="nav-item mx-0 mx-lg-1"><a id="navKreiraj" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/novoglas">Kreiraj oglas</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a></li>
                 </ul>
             </div>
         </div>
@@ -123,7 +122,7 @@
                                 <label class="form-control-label">Opis</label>
                                 <input type="text" id="profil-opis" name="opis" value="Kratak opis" class="form-control">
                             </div>
-                            <div id="sakriveno">
+                            <div id="sakriveno" style='display : none;'>
                                 <div id="promeniLozinku" class="dugme" style="position: relative; margin: auto;">
                                     <button type="button" class="btn btn-outline-primary" style="position: relative; margin: 0px auto; width: 100%;" onclick="promeniLozinku();">Izmeni profil</button>
                                 </div>
