--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -11345,20 +11345,18 @@
             }
             
             #novOglasBack {
-                color: #1abc9c;
                 position: relative;
                 float: left;
-                font-size: 60px;
-                line-height: 0.6em;
-                border: 2px solid #1abc9c;
-                border-radius: 5px;
-                padding: 0px 10px 10px 10px;
             }
             
-            #novOglasBack a {
-                text-decoration: none;
+            #novOglasBack button {
+                width : 60px;
+                height : 40px;
+                font-size : 40px;
+                line-height: 0.1em;
+                padding-bottom : 10px;
             }
-            
+
             #novOglasTitle {
                 margin-right: 70px;
             }
