--- a/Project/src/main/resources/templates/novOglas.html
+++ b/Project/src/main/resources/templates/novOglas.html
@@ -19,7 +19,7 @@
             <div class="col-lg-3 col-md-2"></div>
             <div class="col-lg-6 col-md-8 novioglas-box">
                 <div class="col-lg-12 novioglas-title">
-                    <span id="novOglasBack"><a href="http://localhost:8080/profil"> ← </a></span>
+                    <span id="novOglasBack"><button class="btn btn-outline-primary" onclick="history.back();"> ← </button></span>
                     <span id="novOglasTitle"> Objavi oglas </span>
                 </div>
                 <div class="col-lg-12 novioglas-form">
