--- a/Project/src/main/resources/templates/stranicaOglasa.html
+++ b/Project/src/main/resources/templates/stranicaOglasa.html
@@ -44,7 +44,7 @@
 
         </div>
 
-        <div class="sakrijOdKorisnika">
+        <div class="sakrijOdPoslodavca">
             <div id="dodajCV" class="cv-item">
                 <h6>Unesite Vaš CV</h6>
                 <textarea id="unesiCV" onload=""></textarea>
