--- a/Project/src/main/resources/templates/stranicaOglasa.html
+++ b/Project/src/main/resources/templates/stranicaOglasa.html
@@ -28,6 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/oglasi?tag=0&mesto=0">Oglasi</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/poslodavci">Poslodavci</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#about">O nama</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a id="navProfil" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/profil">Profil</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a id="navKreiraj" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/novoglas">Kreiraj oglas</a></li>
