--- a/Project/src/main/resources/templates/signup.html
+++ b/Project/src/main/resources/templates/signup.html
@@ -28,38 +28,31 @@
                     <form>
                         <div class="form-group">
                             <label class="form-control-label">Ime i prezime</label>
-                            <input type="text" id="name-register" class="form-control" data-sb-validations="required">
-                            <div class="invalid-feedback" data-sb-feedback="name-register:required" style="color: white">Neophodno je da unesete ime!</div>
+                            <input type="text" id="name-register" class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Korisničko ime</label>
-                            <input type="text" id="username-register" class="form-control" data-sb-validations="required">
-                            <div class="invalid-feedback" data-sb-feedback="surname-register:required">Neophodno je da unesete prezime!</div>
+                            <input type="text" id="username-register" class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Mesto boravka</label>
-                            <select id="city-register" class="form-control" data-sb-validations="required"></select>
-                            <div class="invalid-feedback" data-sb-feedback="city-register:required">Neophodno je da unesete mesto boravka!</div>
+                            <select id="city-register" class="form-control"></select>
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Email</label>
-                            <input type="email" id="email-register" class="form-control" data-sb-validations="required,email">
-                            <div class="invalid-feedback" data-sb-feedback="email-register:required">Neophodno je da unesete email!</div>
+                            <input type="email" id="email-register" class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Telefon</label>
-                            <input type="text" id="tel-register" class="form-control" data-sb-validations="required">
-                            <div class="invalid-feedback" data-sb-feedback="tel-register:required">Neophodno je da unesete broj telefona!</div>
+                            <input type="text" id="tel-register" class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Lozinka</label>
-                            <input type="text" id="password-register" class="form-control" data-sb-validations="required">
-                            <div class="invalid-feedback" data-sb-feedback="password-register:required">Neophodno je da unesete korisničko ime!</div>
+                            <input type="text" id="password-register" class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Potvrdite lozinku</label>
-                            <input type="password" id="ppassword-register" class="form-control" data-sb-validations="required">
-                            <div class="invalid-feedback" data-sb-feedback="ppassword-register:required">Neophodno je da unesete lozinku!</div>
+                            <input type="password" id="ppassword-register" class="form-control">
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
