--- a/Project/src/main/resources/templates/signup.html
+++ b/Project/src/main/resources/templates/signup.html
@@ -27,7 +27,7 @@
                 <div class="col-lg-12 login-form">
                     <form>
                         <div class="form-group">
-                            <label class="form-control-label">Ime i prezime</label>
+                            <label class="form-control-label">Ime i prezime / Ime kompanije</label>
                             <input type="text" id="name-register" class="form-control">
                         </div>
                         <div class="form-group">
