--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                             <div class="form-group" style="clear:both">
-                                <label class="form-control-label">Ime i prezime</label>
+                                <label id="imeLabel" class="form-control-label"></label>
                                 <input type="text" value="Ime i Prezime" id="profil-ime" name="ime" class="form-control">
                             </div>
                             <div class="form-group">
