--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -101,7 +101,7 @@
                                         <option>2</option>
                                         <option>1</option>
                                     </select>
-                                    <button type="button" class="btn btn-outline-primary" style="width: 100%;">Oceni</button>
+                                    <button type="button" class="btn btn-outline-primary" style="width: 100%;" onclick="oceni()">Oceni</button>
                                 </div>
                             </div>
                             <div class="form-group" style="clear:both">
