--- a/Project/src/main/resources/templates/index.html
+++ b/Project/src/main/resources/templates/index.html
@@ -33,7 +33,9 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#about">O nama</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a id="navProfil" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/profil">Profil</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a id="navKreiraj" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/novoglas">Kreiraj oglas</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a></li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -104,7 +106,7 @@
                 </div>
                 <!-- Portfolio Item 2-->
                 <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-2)">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-7)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
@@ -116,7 +118,7 @@
                 </div>
                 <!-- Portfolio Item 3-->
                 <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-3)">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-4)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
@@ -128,7 +130,7 @@
                 </div>
                 <!-- Portfolio Item 4-->
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-4)">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-5)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i>
@@ -140,7 +142,7 @@
                 </div>
                 <!-- Portfolio Item 5-->
                 <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-5)">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-8)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
