--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -118,7 +118,9 @@
                                 <label class="form-control-label">Email</label>
                                 <input type="text" id="profil-email" name="email" value="imeprezime@email.com" class="form-control">
                             </div>
-                            <div id="telefoni">
+                            <div class="form-group" id="telefoni">
+                                <label class="form-control-label">Telefoni</label>
+                                    
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Opis</label>
