--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -52,7 +52,7 @@
                     <div class="col-lg-12 profile-form">
                         <form>
                             <div class="form-group">
-                                <label id="prosecna" class="form-control-label" style="padding-left: 10px">Prosečna ocena : </label>
+                                <label id="prosecna" class="form-control-label" style="width : 100%; padding-left: 10px">Prosečna ocena : </label>
                                 <div id="ocene">
                                     <ul style="padding:0%; margin:5px;">
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
@@ -107,7 +107,7 @@
                                 </div>
                             </div>
                             <div class="form-group" style="clear:both">
-                                <label id="imeLabel" class="form-control-label"></label>
+                                <label id="imeLabel" class="form-control-label" style="width : 100%;"></label>
                                 <input type="text" value="Ime i Prezime" id="profil-ime" name="ime" class="form-control">
                             </div>
                             <div class="form-group">
@@ -122,7 +122,7 @@
                                 <label class="form-control-label">Telefoni</label>
                                     
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="clear : both;">
                                 <label class="form-control-label">Opis</label>
                                 <input type="text" id="profil-opis" name="opis" value="Kratak opis" class="form-control">
                             </div>
