--- a/Project/src/main/resources/templates/stranicaOglasa.html
+++ b/Project/src/main/resources/templates/stranicaOglasa.html
@@ -31,7 +31,7 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/poslodavci">Poslodavci</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#about">O nama</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a id="navProfil" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/profil">Profil</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a id="navKreiraj" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/novoglas">Kreiraj oglas</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a id="navKreiraj" class="nav-link py-3 px-0 px-lg-3 rounded sakrijOdKorisnika" href="http://localhost:8080/novoglas" style="display : none;">Kreiraj oglas</a></li>
                     <li class="nav-item mx-0 mx-lg-1">
                         <a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a>
                     </li>
@@ -47,7 +47,7 @@
 
         </div>
 
-        <div class="sakrijOdPoslodavca">
+        <div class="sakrijOdPoslodavca" style="display : none;">
             <div id="dodajCV" class="cv-item">
                 <h6>Unesite Vaš CV</h6>
                 <textarea id="unesiCV" onload=""></textarea>
@@ -55,6 +55,11 @@
                     <button type='button' onclick="prijavise()" class='btn btn-outline-primary' id='oglas-link' style='border-color : #1abc9c;'>Pošalji CV</button>
                 </div>
             </div>
+        </div>
+
+        
+        <div id="prijavljeniKorisnici" style="display : none;">
+
         </div>
     </div>
 
