--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -11126,17 +11126,23 @@
                 border-radius: 10px;
                 text-align: center;
                 color : #1abc9c;
+                min-height: 100px;
                 overflow: hidden;
             }
 
             .prijavljenKorisnik {
                 position : relative;
                 float : left;
-                padding-left : 20px;
+                padding : 5px;
                 border: 3px solid #1abc9c;
                 border-radius: 5px;
-                width : 20%;
-                height : 90px;
+                width : 30%;
+                min-height: 100px;
+                overflow: hidden;
+            }
+
+            .prijavljenKorisnik textarea {
+                width : 80%;
             }
             
             #stranicaOglasa {
