--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -120,11 +120,11 @@
                             </div>
                             <div class="form-group" id="telefoni">
                                 <label class="form-control-label">Telefoni</label>
-                                    
+
                             </div>
                             <div class="form-group" style="clear : both;">
                                 <label class="form-control-label">Opis</label>
-                                <input type="text" id="profil-opis" name="opis" value="Kratak opis" class="form-control">
+                                <textarea id="profil-opis" name="opis" value="Kratak opis" class="form-control" style="overflow: scroll;border:3px solid #0DB8DE ; "></textarea>
                             </div>
                             <div id="sakriveno" style='display : none;'>
                                 <div id="promeniLozinku" class="dugme" style="position: relative; margin: auto;">
