--- a/Project/src/main/resources/templates/signup.html
+++ b/Project/src/main/resources/templates/signup.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Lozinka</label>
-                            <input type="text" id="password-register" class="form-control">
+                            <input type="password" id="password-register" class="form-control">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">Potvrdite lozinku</label>
