--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -39,7 +39,7 @@
         <div class="row">
 
             <div class="col-lg-6 col-md-8 profile-box">
-                <div class="col-lg-12 samoZaAdmina">
+                <div class="col-lg-12 samoZaAdmina" id="brisanjeProfila">
                     <button type='button' class='btn btn-outline-primary sakrijOdKorisnika kanta'><i class='fas fa-trash'></i></button>
                 </div>
                 <div class="col-lg-12 profile-user" style="clear: both;">
