--- a/Project/src/main/resources/templates/stranicaOglasa.html
+++ b/Project/src/main/resources/templates/stranicaOglasa.html
@@ -59,7 +59,7 @@
 
         
         <div id="prijavljeniKorisnici" style="display : none;">
-
+            <h2>Nema prijavljenih korisnika</h2>
         </div>
     </div>
 
