--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -11428,7 +11428,7 @@
                 width: 48%;
                 margin: 12px;
                 height: 200px;
-                background-color: white;
+                background-color: #e3fffb;
                 border: 3px solid #0DB8DE;
                 border-radius: 5px;
                 color: #0DB8DE;
