--- a/Project/src/main/resources/templates/stranicaOglasa.html
+++ b/Project/src/main/resources/templates/stranicaOglasa.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="sakrijOdPoslodavca" style="display : none;">
-            <div id="dodajCV" class="cv-item">
+            <div id="dodajCV" class="cv-item" style="background-color:#e3fffb">
                 <h6>Unesite Vaš CV</h6>
                 <textarea id="unesiCV" onload=""></textarea>
                 <div class='dugme'>
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        
+
         <div id="prijavljeniKorisnici" style="display : none;">
             <h2>Nema prijavljenih korisnika</h2>
         </div>
